// Vitest Snapshot v1

exports[`<Loader /> > Should render Loader when loaded 1`] = `
<DocumentFragment>
  <div
    class="af-loader"
  >
    <span>
      my component to load
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Loader /> > Should render Loader when loading 1`] = `
<DocumentFragment>
  <div
    class="af-loader"
  >
    <p
      class="af-loader__spinner"
    />
  </div>
</DocumentFragment>
`;
